Portal upgrade to jdk 11
Update to use OpenJ9
Also fixes required for maven upgrade to JDK 11

Change-Id: I17968ea0feeea6de8b2d9e59564794834bd16b5f
Signed-off-by: justin14 <justin.early@est.tech>